updated coach contact

--- a/coaches.qmd
+++ b/coaches.qmd
@@ -8,16 +8,17 @@ execute:
 
 ## Paul
 
-Every client is taken through an initial stage of their training programme individually by one of our experienced and enthusiastic instructors. At regular intervals each member will have a private consultation with one of our fully qualified instructors, who will devise an appropriate first training programme.
-
-If you have any queries about training, then please feel free telephone or contact us on the social media streams above.
-
 ![Paul](/media/pslythe.jpg "Title: Paul"){fig-alt="Picture of Paul."}
 
 Paul Slythe
 Gym Manager / Director
 
-Paul Slythe
+[Paul Instagram](https://www.instagram.com/bobprowsehealthclub/)
+
+[Paul Twitter](https://X.com/BobProwseGym)
+
+[Paul Facebook](https://facebook.com/BobProwseGym)
+
 Qualifications
 B.A.W.L.A Trained, Lifefit 2000, Advanced Exercise Performance Level 3 UKA track and field, YMCA Level 3, Health and Safety and Appointed person.
 
@@ -36,6 +37,8 @@ Whether you are brand new to the gym environment or a competent athlete, we can 
 
 Simon Mercer
 
+[Simon Instagram](https://www.instagram.com/simonmercercoaching/)
+
 Qualifications:
 
 - 10+ years of gym experience
@@ -53,15 +56,20 @@ I have extensive experience helping people from all areas of fitness, whether it
 After spending years in powerlifting and enjoying coaching, I successfully created the Bob Prowse Powerlifting Team, which competes frequently.
 In addition to Personal Training, I offer bespoke online coaching for various goals, including powerlifting, aesthetics, and strength & conditioning.
 
-Working together, I believe I can help you achieve fast results while enjoying the process. Feel free to contact me personally and check out my Instagram @simonmercercoaching.
+Working together, I believe I can help you achieve fast results while enjoying the process. Feel free to contact me personally and check out my Instagram above.
 
 ![Simon2](/media/smercer3.jpg "Title: Simon"){fig-alt="Picture of Simon."}
 
-![Ria](/media/Ria.jpeg "Title: Ria"){fig-alt="Picture of Ria."}
-
 ## Ria
 
+![Ria](/media/Ria.jpeg "Title: Ria"){fig-alt="Picture of Ria."}
+
 Ria Dunmill
+
+[Ria Instagram](https://www.instagram.com/r.e.d_coaching_/)
+
+Riadunmill85@gmail.com
+07791 167573
 
 Level 2 Gym Instructor
 Level 3 Personal Trainer
@@ -81,8 +89,6 @@ Watching my clients progress is why I love what I do. Building a strong rapour i
 I offer individual personal training sessions/block bookings, and online coaching to keep you motivated and accountable throughout your fitness journey.
 
 You will find me in the gym Monday through to Saturday, both with clients or putting myself through it. To arrange a chat about your fitness journey why not pop in and we can get a plan of action in place.
-Riadunmill85@gmail.com
-07791 167573
 
 ![Ria2](/media/Ria2.jpeg "Title: Ria"){fig-alt="Picture of Ria."}
 
@@ -91,6 +97,11 @@ Riadunmill85@gmail.com
 ![Courtney](/media/courtney.jpeg "Title: Courtney"){fig-alt="Picture of Courtney."}
 
 Courtney Welham
+
+[Courtney Instagram](https://www.instagram.com/courtneywelham_evolve/)
+
+Email: coachcourtswelham@gmail.com
+Phone: 07572427159
 
 Level 2 Gym Instructor
 Level 3 Personal Trainer
@@ -103,9 +114,6 @@ Whether you're aiming to build strength, loose weight or enhance performance - I
 
 If you're ready to embark on your fitness journey to unleash your full potential, please contact me on any of the following:
 
-Email: coachcourtswelham@gmail.com
-Phone: 07572427159
-Instagram: @courtney.welham
 
 ![Courtney2](/media/courtney2.jpeg "Title: Courtney"){fig-alt="Picture of Courtney."}
 
@@ -114,6 +122,13 @@ Instagram: @courtney.welham
 ![Charley](/media/cashton1.jpg "Title: Charley"){fig-alt="Picture of Charley."}
 
 Charley Ashton 
+
+[Charley Instagram](https://www.instagram.com/_chizzle_a/)
+
+[Charley bootcamp Instagram](https://www.instagram.com/bootcampukmaidstone/)
+
+07753 468895 
+Charley@bcuk.uk 
 
 Level 2 Gym Instructor 
 Level 3 Personal Trainer 
@@ -136,11 +151,6 @@ My business ethos has always been healthy body & healthy mind.
 
 Happy to meet for a free consultation to discuss your goals 
 
-07753 468895 
-Charley@bcuk.uk 
-@chizzle_a
-@bootcampukmaidstone
-
 ![Charley](/media/cashton2.jpg "Title: Charley"){fig-alt="Picture of Charley."}
 
 ## Mitch
@@ -148,6 +158,8 @@ Charley@bcuk.uk
 ![Mitch](/media/mason2.jpeg "Title: Mitch"){fig-alt="Picture of Mitch."}
 
 Mitch Mason
+
+Mitchmasonpersonaltrainer@gmail.com
 
 Qualifications
 
@@ -159,9 +171,6 @@ L1 & L2 CrossFit
 L1 & L2 British weightlifting
 10yrs experience
 Early sporting back ground was based around MMA & boxing, I found my true passion was weightlifting which took me to the heights of the English Championships . This in turn made me become a strength & conditioning coach to help give back to the fitness community.
-For personal training:
-
-Mitchmasonpersonaltrainer@gmail.com
 
 ## Pete
 
